ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name
  namespace: default
spec:
  tls:
  - hosts:
    - "sample-web.k8sutils.com"
    secretName: tls-secret
  rules:
  - host: "sample-web.k8sutils.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8080
